<resources>
    <string name="app_name">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_visor_asistencia">Visor de asistencia</string>
    <string name="menu_justificar_faltas">Justificar Faltas</string>
    <string name="menu_faltas_justificadas">Faltas Justificadas</string>
    <string name="menu_ver_faltas">Ver Faltas</string>

    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_salir">Salir</string>


    <string name="btn_enviar">enviar</string>
    <string name="txt_motivo">Motivo</string>
    <string name="txt_comentario">Comentario</string>
    <string name="txt_adjuntar_documento">Adjuntar Documento</string>
    <string name="txt_seleccionar_fecha">Seleccionar Fecha</string>


    <string name="txt_tutor">Tutor:</string>
    <string name="txt_Alumno">Alumno:</string>
    <string name="txt_gmail">Gmail:</string>
    <string name="txt_faltas_totales">Faltas Totales:</string>

    <string name="txt_validadas">Validadas</string>
    <string name="txt_pendientes">Pendientes</string>
    <string name="txt_rechazadas">Rechazadas</string>


    <string-array name="spinner_options">
        <item>M03 - Base de datos</item>
        <item>M04 - Lenguaje de marcas</item>
        <item>M05 - Acceso a datos</item>
        <item>M06 - Empresa</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>