<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_visor_asistencia"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_visor_asistencia"/>
        <item
            android:id="@+id/nav_justificar_faltas"
            android:icon="@drawable/ic_listcheck"
            android:title="@string/menu_justificar_faltas"/>
        <item
            android:id="@+id/nav_faltas_justificadas"
            android:icon="@drawable/ic_check"
            android:title="@string/menu_faltas_justificadas"/>

        <item
            android:id="@+id/nav_ver_faltas"
            android:icon="@drawable/ic_eye"
            android:title="@string/menu_ver_faltas"/>
        <item
            android:id="@+id/configuration_section"
            android:title="">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_ajustes"
                        android:icon="@drawable/ic_settings"
                        android:title="@string/menu_ajustes"/>
                    <item
                        android:id="@+id/nav_salir"
                        android:icon="@drawable/ic_exit"
                        android:title="@string/menu_salir"/>
                </group>
            </menu>
        </item>
    </group>

</menu>
